Over mij grote lijnen
vooruitgang op WEB-01, WEB-02, WEB-03, WEB-06, WEB-07, WEB-08, WEB-09, ook op de minimum vereisten.

--- a/engels/indexEn.html
+++ b/engels/indexEn.html
@@ -15,7 +15,7 @@
     <a name=""top></a>
     <ul>
         <li><a class="active" href="indexNl.html">Home</a></li>
-        <li><a href="#placeholder">About me</a></li>
+        <li><a href="overmijEN.html">About me</a></li>
         <li><a href="#placeholder">School Career</a></li>
         <li><a href="#placeholder">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
