--- a/nederlands/indexNl.html
+++ b/nederlands/indexNl.html
@@ -12,7 +12,7 @@
 <!--https://coolors.co/palette/386641-6a994e-a7c957-f2e8cf-bc4749-->
 
 <body>
-    <a name=""top></a>
+    <a name="top"></a>
     <ul>
         <li><a class="active" href="indexNl.html">Home</a></li>
         <li><a href="overmijNl.html">Over Mij</a></li>
@@ -34,7 +34,7 @@
             <p>Op deze website zult u leren wat voor persoon ik ben en wat mijn competenties zijn.</p>
         </div>
         <div class="shadow">
-            <img src="/images/afbeelding1.jpg" alt="">
+            <img src="/images/headshot.png" alt="Foto">
         </div>
     </div>
     <footer>
