--- a/nederlands/overmijNl.html
+++ b/nederlands/overmijNl.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Over Mij</title>
+    <link rel="stylesheet" href="overmijNl.css">
 </head>
+
 <body>
-    
+    <a name="" top></a>
+    <ul>
+        <li><a href="indexNl.html">Home</a></li>
+        <li><a class="active" href="overmijNl.html">Over Mij</a></li>
+        <li><a href="#placeholder">School Carière</a></li>
+        <li><a href="#placeholder">Werkervaring</a></li>
+        <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
+            <div class="dropdown-content">
+                <a href="overmijNl.html" class="active">Nederlands</a>
+                <a href="/engels/overmijEN.html">Engels</a>
+            </div>
+        </li>
+    </ul>
+    <br>
+    <br>
+
+    <main class="grid">
+        <article>
+
+            <div class="shadow">
+                <img src="/images/afbeelding1.jpg" alt="ikzelf">
+            </div>
+            <div class="text">
+                <h3>Remco Simenon</h3>
+                <p>Dit ben ik, het onderwerp van de website. Ik ben een student in het eerste jaar van de graduaat
+                    richting programmeren op de hogeschool PXL. Ik ben gedreven in de dingen die ik doe en leer snel
+                    nieuwe dingen bij. Ik ben ook iemand die als ik iets niet weet vragen zal stellen zodat ik bij kan
+                    leren</p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/twiggy.jpg" alt="twiggy">
+            </div>
+            <div class="text">
+                <h3>Twiggy</h3>
+                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen.</p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/vissen.jpg" alt="vissen">
+            </div>
+            <div class="text">
+                <h3>Hobbies</h3>
+                <p>Mijn voornaamste hobbies zijn lezen & vissen op karpers wanneer de temperatuur het toelaat. Gamen doe
+                    ik ook regelmatig, dit zorgt er natuurlijk voor dat ik en mijn toetsenbord goed overeen komen</p>
+            </div>
+        </article>
+
+    </main>
+    <footer>
+        <p id="links">Remco Simenon 1PROE</p>
+        <p id="midden">Opdracht Curriculum vitae</p>
+        <button id="rechts"><a href="#top">terug naar boven</a></button>
+    </footer>
 </body>
+
 </html>
