Over mij uitbreiding + fix footer
vooruitgang op WEB-01, WEB-02, WEB-03, WEB-06, WEB-07, WEB-08, WEB-09, ook op de minimum vereisten.

--- a/engels/indexEn.html
+++ b/engels/indexEn.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="indexEN.css">
+    <link rel="icon" href="/images/logo.png">
+
 
 </head>
 <!--https://coolors.co/palette/386641-6a994e-a7c957-f2e8cf-bc4749-->
@@ -34,7 +36,7 @@
             <p>On this website you will learn more about me and what my skills are .</p>
         </div>
         <div class="shadow">
-            <img src="/images/afbeelding1.jpg" alt="">
+            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png" alt="ikzelf"></a>
         </div>
     </div>
     <footer>
