--- a/engels/overmijEN.html
+++ b/engels/overmijEN.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link rel="stylesheet" href="overmijEN.css">
+    <link rel="icon" href="/images/logo.png">
+
 </head>
 
 <body>
@@ -26,7 +28,7 @@
     <br>
     <br>
 
-    <main class="grid">
+    <div class="grid">
         <article>
 
             <div class="shadow">
@@ -34,7 +36,9 @@
             </div>
             <div class="text">
                 <h3>Remco Simenon</h3>
-                <p>This is me, the subject of this website. I'm a student in my first year of getting a graduate degree in programming at the PXL college. I am passionate about the things i do and learn new things quick. I also ask questions if i don't know something so that i can improve my skills.</p>
+                <p>This is me, the subject of this website. I'm a student in my first year of getting a graduate degree
+                    in programming at the PXL college. I am passionate about the things i do and learn new things quick.
+                    I also ask questions if i don't know something so that i can improve my skills.</p>
             </div>
         </article>
         <article>
@@ -52,11 +56,44 @@
             </div>
             <div class="text">
                 <h3>Hobbies</h3>
-                <p>My main hobbies are reading & fishing for carp when the temperature permits it. I also play games regularly, this ensures that my keyboard and i match well.</p>
+                <p>My main hobbies are reading & fishing for carp when the temperature permits it. I also play games
+                    regularly, this ensures that my keyboard and i match well.</p>
             </div>
         </article>
-
-    </main>
+        <article>
+            <div class="shadow">
+                <img src="/images/league.jpg" alt="lol">
+            </div>
+            <div class="text">
+                <h3>League of Legends</h3>
+                <p>League of Legends is the game I play the most. I mainly play the competitive mode. Thanks to League of Legends I have learned to deal with people who cannot complete their assigned tasks. This ensures that i will always do my best to perform well in a group assignment. 
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/kitaan.jpg" alt="kitaan">
+            </div>
+            <div class="text">
+                <h3>Kitaan</h3>
+                <p>Kitaan is my other cat. This one is not as friendly as Twiggy but still means a lot to me.
+                </p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/vogels.jpg" alt="vogels">
+            </div>
+            <div class="text">
+                <h3>Vogels</h3>
+                <p>I have 2 aviaries with birds in them. In 1 aviary there are canaries, 2 bullfinches and 1 goldfinch. In the other one there are Gouldian finches</p>
+            </div>
+        </article>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>
         <p id="links">Remco Simenon 1PROE</p>
         <p id="midden">Exercise Curriculum vitae</p>
