--- a/nederlands/indexNl.html
+++ b/nederlands/indexNl.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thuispagina</title>
     <link rel="stylesheet" href="indexNl.css">
+    <link rel="icon" href="/images/logo.png">
+
 
 </head>
 <!--https://coolors.co/palette/386641-6a994e-a7c957-f2e8cf-bc4749-->
@@ -34,7 +36,7 @@
             <p>Op deze website zult u leren wat voor persoon ik ben en wat mijn competenties zijn.</p>
         </div>
         <div class="shadow">
-            <img src="/images/headshot.png" alt="Foto">
+            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png" alt="ikzelf"></a>
         </div>
     </div>
     <footer>
