--- a/nederlands/overmijNl.html
+++ b/nederlands/overmijNl.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Over Mij</title>
     <link rel="stylesheet" href="overmijNl.css">
+    <link rel="icon" href="/images/logo.png">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <br>
     <br>
 
-    <main class="grid">
+    <div class="grid">
         <article>
 
             <div class="shadow">
@@ -46,7 +47,7 @@
             </div>
             <div class="text">
                 <h3>Twiggy</h3>
-                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen.</p>
+                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen. Twiggy wordy graag geaaid en komt regelmatig op mijn bureau liggen</p>
             </div>
         </article>
         <article>
@@ -59,8 +60,39 @@
                     ik ook regelmatig, dit zorgt er natuurlijk voor dat ik en mijn toetsenbord goed overeen komen</p>
             </div>
         </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/league.jpg" alt="lol">
+            </div>
+            <div class="text">
+                <h3>League of Legends</h3>
+                <p>League of legends is het spel dat ik het meeste speel. Ik speel hier voornamelijk de competieve modus in. Dankzij league of legends heb ik leren omgaan met mensen die niet hun opgegeven taken kunnen voltooien. Dit zorgt ervoor dat ik in een groepsopdracht altijd mijn best zal doen om te presteren. </p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/kitaan.jpg" alt="kitaan">
+            </div>
+            <div class="text">
+                <h3>Kitaan</h3>
+                <p>Kitaan is mijn andere kat. Deze kat is wat minder vriendelijk maar betekent nog steeds veel voor mij.</p>
+            </div>
+        </article>
+        <article>
+            <div class="shadow">
+                <img src="/images/vogels.jpg" alt="vogels">
+            </div>
+            <div class="text">
+                <h3>Vogels</h3>
+                <p>Ik heb 2 volières met vogels in. In 1 volière zitten kanaries, 2 goudvinken en 1 distelvink. In de andere zitten Gouldamadines.</p>
+            </div>
+        </article>
 
-    </main>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>
         <p id="links">Remco Simenon 1PROE</p>
         <p id="midden">Opdracht Curriculum vitae</p>
