school carière & werkervaring
zie titel

--- a/engels/indexEn.html
+++ b/engels/indexEn.html
@@ -19,7 +19,7 @@
         <li><a class="active" href="indexNl.html">Home</a></li>
         <li><a href="overmijEN.html">About me</a></li>
         <li><a href="#placeholder">School Career</a></li>
-        <li><a href="#placeholder">Work Experience</a></li>
+        <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
                 <a href="/nederlands/indexNl.html">Dutch</a>
