--- a/engels/overmijEN.html
+++ b/engels/overmijEN.html
@@ -17,7 +17,7 @@
         <li><a href="indexEn.html">Home</a></li>
         <li><a class="active" href="overmijEN.html">About me</a></li>
         <li><a href="#placeholder">School Career</a></li>
-        <li><a href="#placeholder">Work Experience</a></li>
+        <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
                 <a href="/nederlands/overmijNl.html">Dutch</a>
@@ -62,11 +62,15 @@
         </article>
         <article>
             <div class="shadow">
-                <img src="/images/league.jpg" alt="lol">
+                <img src="/images/duolingo.png" alt="talenkennis">
             </div>
             <div class="text">
-                <h3>League of Legends</h3>
-                <p>League of Legends is the game I play the most. I mainly play the competitive mode. Thanks to League of Legends I have learned to deal with people who cannot complete their assigned tasks. This ensures that i will always do my best to perform well in a group assignment. 
+                <h3>Language skills</h3>
+                <p>Dutch is my mother tongue, so I speak it almost perfectly. Of course, writing also goes well as long
+                    as I don't do it too quickly. I can also speak English very well, I learned English by watching
+                    English movies with Dutch subtitles from a young age. The fact that i also read and play games in
+                    English only imrpoves my English. French is a language of which i have to report that I know almost
+                    nothing.
                 </p>
             </div>
         </article>
@@ -86,7 +90,8 @@
             </div>
             <div class="text">
                 <h3>Vogels</h3>
-                <p>I have 2 aviaries with birds in them. In 1 aviary there are canaries, 2 bullfinches and 1 goldfinch. In the other one there are Gouldian finches</p>
+                <p>I have 2 aviaries with birds in them. In 1 aviary there are canaries, 2 bullfinches and 1 goldfinch.
+                    In the other one there are Gouldian finches</p>
             </div>
         </article>
     </div>
