--- a/nederlands/indexNl.html
+++ b/nederlands/indexNl.html
@@ -18,8 +18,8 @@
     <ul>
         <li><a class="active" href="indexNl.html">Home</a></li>
         <li><a href="overmijNl.html">Over Mij</a></li>
-        <li><a href="#placeholder">School Carière</a></li>
-        <li><a href="#placeholder">Werkervaring</a></li>
+        <li><a href="schoolcarriereNL.html">School Carière</a></li>
+        <li><a href="werkervaringNL.html">Werkervaring</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="indexNl.html" class="active">Nederlands</a>
