--- a/nederlands/overmijNl.html
+++ b/nederlands/overmijNl.html
@@ -16,7 +16,7 @@
         <li><a href="indexNl.html">Home</a></li>
         <li><a class="active" href="overmijNl.html">Over Mij</a></li>
         <li><a href="#placeholder">School Carière</a></li>
-        <li><a href="#placeholder">Werkervaring</a></li>
+        <li><a href="werkervaringNL.html">Werkervaring</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="overmijNl.html" class="active">Nederlands</a>
@@ -47,7 +47,8 @@
             </div>
             <div class="text">
                 <h3>Twiggy</h3>
-                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen. Twiggy wordy graag geaaid en komt regelmatig op mijn bureau liggen</p>
+                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen. Twiggy wordy graag geaaid en komt
+                    regelmatig op mijn bureau liggen</p>
             </div>
         </article>
         <article>
@@ -62,11 +63,15 @@
         </article>
         <article>
             <div class="shadow">
-                <img src="/images/league.jpg" alt="lol">
+                <img src="/images/duolingo.png" alt="Talenkennis">
             </div>
             <div class="text">
-                <h3>League of Legends</h3>
-                <p>League of legends is het spel dat ik het meeste speel. Ik speel hier voornamelijk de competieve modus in. Dankzij league of legends heb ik leren omgaan met mensen die niet hun opgegeven taken kunnen voltooien. Dit zorgt ervoor dat ik in een groepsopdracht altijd mijn best zal doen om te presteren. </p>
+                <h3>Talenkennis</h3>
+                <p>Nederlands is mijn moedertaal, ik spreek dit dus bijna perfect. Schrijven gaat natuurlijk ook goed
+                    zolang ik het niet te snel doe. Engels kan ik ook erg goed, ik heb Engels geleerd door vanaf een
+                    jonge leeftijd engelse films te kijken met nederlandse ondertitels. Het feit dat ik ook in het
+                    engels lees en games speel zorgt ervoor dat mijn engels enkel beter wordt. Frans is een taal waarvan
+                    ik moet melden dat ik er bijna niks van kan.</p>
             </div>
         </article>
         <article>
@@ -75,7 +80,8 @@
             </div>
             <div class="text">
                 <h3>Kitaan</h3>
-                <p>Kitaan is mijn andere kat. Deze kat is wat minder vriendelijk maar betekent nog steeds veel voor mij.</p>
+                <p>Kitaan is mijn andere kat. Deze kat is wat minder vriendelijk maar betekent nog steeds veel voor mij.
+                </p>
             </div>
         </article>
         <article>
@@ -84,7 +90,8 @@
             </div>
             <div class="text">
                 <h3>Vogels</h3>
-                <p>Ik heb 2 volières met vogels in. In 1 volière zitten kanaries, 2 goudvinken en 1 distelvink. In de andere zitten Gouldamadines.</p>
+                <p>Ik heb 2 volières met vogels in. In 1 volière zitten kanaries, 2 goudvinken en 1 distelvink. In de
+                    andere zitten Gouldamadines.</p>
             </div>
         </article>
 
