button fix + responsive
zie titel

--- a/engels/overmijEN.html
+++ b/engels/overmijEN.html
@@ -13,10 +13,9 @@
 
 <body>
     <a name="" top></a>
-    <ul>
-        <li><a href="indexEn.html">Home</a></li>
+    <ul class="topnav">        <li><a href="indexEn.html">Home</a></li>
         <li><a class="active" href="overmijEN.html">About me</a></li>
-        <li><a href="#placeholder">School Career</a></li>
+        <li><a href="schoolcariereEN.html">School Career</a></li>
         <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
@@ -37,8 +36,10 @@
             <div class="text">
                 <h3>Remco Simenon</h3>
                 <p>This is me, the subject of this website. I'm a student in my first year of getting a graduate degree
-                    in programming at the PXL college. I am passionate about the things i do and learn new things quick.
-                    I also ask questions if i don't know something so that i can improve my skills.</p>
+                    in programming at the PXL college. I am passionate about the things I do and
+                    learn new things quick. I also ask questions if I don't know something so that I can improve my
+                    skills.
+                </p>
             </div>
         </article>
         <article>
@@ -57,7 +58,7 @@
             <div class="text">
                 <h3>Hobbies</h3>
                 <p>My main hobbies are reading & fishing for carp when the temperature permits it. I also play games
-                    regularly, this ensures that my keyboard and i match well.</p>
+                    regularly, this ensures that my keyboard and I match well.</p>
             </div>
         </article>
         <article>
@@ -68,8 +69,8 @@
                 <h3>Language skills</h3>
                 <p>Dutch is my mother tongue, so I speak it almost perfectly. Of course, writing also goes well as long
                     as I don't do it too quickly. I can also speak English very well, I learned English by watching
-                    English movies with Dutch subtitles from a young age. The fact that i also read and play games in
-                    English only imrpoves my English. French is a language of which i have to report that I know almost
+                    English movies with Dutch subtitles from a young age. The fact that I also read and play games in
+                    English only improves my English. French is a language of which I have to report that I know almost
                     nothing.
                 </p>
             </div>
@@ -80,7 +81,7 @@
             </div>
             <div class="text">
                 <h3>Kitaan</h3>
-                <p>Kitaan is my other cat. This one is not as friendly as Twiggy but still means a lot to me.
+                <p>Kitaan is my other cat. This one is not as friendly as Twiggy, but still means a lot to me.
                 </p>
             </div>
         </article>
