--- a/engels/werkervaringEN.html
+++ b/engels/werkervaringEN.html
@@ -15,10 +15,10 @@
 
 <body>
     <a name="" top></a>
-    <ul>
+    <ul class="topnav">
         <li><a href="indexNl.html">Home</a></li>
         <li><a href="overmijEN.html">About me</a></li>
-        <li><a href="#placeholder">School Career</a></li>
+        <li><a href="schoolcariereEN.html">School Career</a></li>
         <li><a class="active" href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
@@ -41,8 +41,8 @@
         <tr>
             <td>Activate</td>
             <td>Salesman</td>
-            <td>At Activate I went door to door to sell people a subscription to support charities. Customer service and
-                self-confidence were very important. I have also experienced rejection from customers here, which
+            <td>At Activate, I went door to door to sell people a subscription to support charities. Customer service
+                and self-confidence were very important. I have also experienced rejection from customers here, which
                 ensures that I will never get angry with customers if they reject a design or something similar.</td>
             <td>December 2022 - March 2023</td>
         </tr>
@@ -57,8 +57,8 @@
         <tr>
             <td>Brantano</td>
             <td>Shop assistant</td>
-            <td>At Brantano I worked both in the store and in the stock area. In the store I cleared the shelves and
-                helped/greeted customers. I unpacked oders in the stock room. Here I developed my customer service
+            <td>At Brantano I worked both in the store and in the stock area. In the store, I cleared the shelves and
+                helped/greeted customers. I unpacked orders in the stockroom. Here I developed my customer service
                 skills, which I later continued to improve.</td>
             <td>March 2019 - April 2019</td>
         </tr>
@@ -67,7 +67,7 @@
             <td>Handyman</td>
             <td>With my grandfather I went to do odd jobs/renovations at people's houses several times a year. Together
                 we did jobs that ranged from simply painting a wall to laying new walls, flooring, pipes & electricity
-                in an attic. I learned a lot here in general, but most importantly te persevere even when something
+                in an attic. I learned a lot here in general, but most importantly to persevere even when something
                 seems difficult and to do this without complaining.</td>
             <td>2013-2022</td>
         </tr>
