--- a/nederlands/indexNl.html
+++ b/nederlands/indexNl.html
@@ -15,7 +15,7 @@
 
 <body>
     <a name="top"></a>
-    <ul>
+    <ul class="topnav">
         <li><a class="active" href="indexNl.html">Home</a></li>
         <li><a href="overmijNl.html">Over Mij</a></li>
         <li><a href="schoolcarriereNL.html">School Carière</a></li>
@@ -31,12 +31,13 @@
         <div class="korteuitleg">
 
             <h3>Welkom</h3>
-            <p>Hey, mijn naam is Remco Simenon.</p>
+            <p>Hallo, mijn naam is Remco Simenon.</p>
             <p>Ik ben een student op de hogeschool PXL.</p>
             <p>Op deze website zult u leren wat voor persoon ik ben en wat mijn competenties zijn.</p>
         </div>
         <div class="shadow">
-            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png" alt="ikzelf"></a>
+            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png"
+                    alt="ikzelf"></a>
         </div>
     </div>
     <footer>
