--- a/nederlands/werkervaringNL.html
+++ b/nederlands/werkervaringNL.html
@@ -15,10 +15,10 @@
 
 <body>
     <a name="top"></a>
-    <ul>
+    <ul class="topnav">
         <li><a href="indexNl.html">Home</a></li>
         <li><a href="overmijNl.html">Over Mij</a></li>
-        <li><a href="#placeholder">School Carière</a></li>
+        <li><a href="schoolcarriereNL.html">School Carière</a></li>
         <li><a class="active" href="werkervaringNL.html">Werkervaring</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
@@ -50,7 +50,7 @@
             <td>Servilux</td>
             <td>Logistieke assistent</td>
             <td>Bij Servilux hielp ik met het uitpakken van leveringen, deze in het systeem scannen en dan weg leggen op
-                de juiste plek. Hier heb ik geleerd mij zeer te focussen op mijn taken zodat ik geen fouten maak door
+                de juiste plek. Hier heb ik geleerd me zeer te focussen op mijn taken zodat ik geen fouten maak door
                 slordigheid.</td>
             <td>December 2021 - Januari 2022</td>
         </tr>
@@ -63,16 +63,49 @@
             <td>Maart 2019 - April 2019</td>
         </tr>
         <tr>
-            <td>Klusjesman met Opa</td>
+            <td>Klusjesman met opa</td>
             <td>Klusjesman</td>
-            <td>Met mijn Opa ben ik meerdere keren per jaar bij mensen hun huizen klusjes/renovaties gaan doen. Samen
-                deden wij klusjes die gingen van gewoon een muur te verven tot op een zolder nieuwe wanden, bevloering,
-                leidingen & elektriciteit leggen. Hier heb ik in het algemeen veel bijgeleerd maar voornamelijk
-                doorzetten ook al lijkt iets moeilijk en dit te doen zonder klagen.</td>
+            <td>Met mijn opa ben ik meerdere keren per jaar bij mensen hun huizen klusjes/renovaties gaan doen. Samen
+                deden we klusjes die gingen van gewoon een muur te verven tot op een zolder nieuwe wanden, bevloering,
+                leidingen & elektriciteit leggen. Hier heb ik in het algemeen veel bijgeleerd, maar voornamelijk
+                doorzetten, ook al lijkt iets moeilijk en dit te doen zonder klagen.</td>
             <td>2013-2022</td>
         </tr>
 
     </table>
+
+
+    <ul class="vervanger">
+        <li>Activate
+            <ul>
+                <li>Verkoper</li>
+                <li>Ik verkocht deur tot deur abonnementen om goede doelen te steunen.</li>
+                <li>December 2022 - Maart 2023</li>
+            </ul>
+        </li>
+        <li>Servilux
+            <ul>
+                <li>Logistieke Assistent</li>
+                <li>Ik hielp met leveringen uitpakken, inscannen & wegleggen</li>
+                <li>December 2021 - Januari 2022</li>
+            </ul>
+        </li>
+        <li>Brantano
+            <ul>
+                <li>Winkelmedewerker</li>
+                <li>Ik hielp in de winkel en in de voorraad ruimte</li>
+                <li>maart 2019 - April 2019</li>
+
+            </ul>
+        </li>
+        <li>Klusjesman met opa
+            <ul>
+                <li>Klusjesman</li>
+                <li>Ik hielp mijn opa met het opknappen van huizen.</li>
+                <li>2013-2022</li>
+            </ul>
+        </li>
+    </ul>
 
     <footer>
         <p id="links">Remco Simenon 1PROE</p>
