--- a/engels/indexEn.html
+++ b/engels/indexEn.html
@@ -14,11 +14,11 @@
 <!--https://coolors.co/palette/386641-6a994e-a7c957-f2e8cf-bc4749-->
 
 <body>
-    <a name=""top></a>
-    <ul>
+    <a name="" top></a>
+    <ul class="topnav">
         <li><a class="active" href="indexNl.html">Home</a></li>
         <li><a href="overmijEN.html">About me</a></li>
-        <li><a href="#placeholder">School Career</a></li>
+        <li><a href="schoolcariereEN.html">School Career</a></li>
         <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
@@ -33,10 +33,11 @@
             <h3>Welcome</h3>
             <p>Hello, my name is Remco Simenon.</p>
             <p>I'm a student at the PXL college.</p>
-            <p>On this website you will learn more about me and what my skills are .</p>
+            <p>On this website, you will learn more about me and what my skills are.</p>
         </div>
         <div class="shadow">
-            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png" alt="ikzelf"></a>
+            <a href="https://www.linkedin.com/in/remco-simenon-b4bb0b295/"><img src="/images/headshot.png"
+                    alt="ikzelf"></a>
         </div>
     </div>
     <footer>
