--- a/nederlands/overmijNl.html
+++ b/nederlands/overmijNl.html
@@ -12,10 +12,9 @@
 
 <body>
     <a name="" top></a>
-    <ul>
-        <li><a href="indexNl.html">Home</a></li>
+    <ul class="topnav">        <li><a href="indexNl.html">Home</a></li>
         <li><a class="active" href="overmijNl.html">Over Mij</a></li>
-        <li><a href="#placeholder">School Carière</a></li>
+        <li><a href="schoolcarriereNL.html">School Carière</a></li>
         <li><a href="werkervaringNL.html">Werkervaring</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
@@ -47,7 +46,7 @@
             </div>
             <div class="text">
                 <h3>Twiggy</h3>
-                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen. Twiggy wordy graag geaaid en komt
+                <p>Twiggy is mijn kat & mijn motivatie om een diploma te halen. Twiggy wordt graag geaaid en komt
                     regelmatig op mijn bureau liggen</p>
             </div>
         </article>
