--- a/nederlands/schoolcarriereNL.html
+++ b/nederlands/schoolcarriereNL.html
@@ -15,20 +15,20 @@
 
 <body>
     <a name="top"></a>
-    <ul>
-        <li><a href="indexNl.html">Home</a></li>
+    <ul class="topnav">        <li><a href="indexNl.html">Home</a></li>
         <li><a href="overmijNl.html">Over Mij</a></li>
         <li><a class="active" href="schoolcarriereNL.html">School Carière</a></li>
         <li><a href="werkervaringNL.html">Werkervaring</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="schoolcarriereNL.html" class="active">Nederlands</a>
-                <a href="/engels/indexEn.html">Engels</a>
+                <a href="/engels/schoolcariereEN.html">Engels</a>
             </div>
         </li>
     </ul>
 
     <h2>School Carière</h2>
+    <p class="uitleg">Hou de afbeelding ingedrukt.</p>
     <div class="container">
 
         <div class="row">
@@ -73,7 +73,8 @@
                         </div>
                         <div class="flip-box-back">
                             <h2>LevelX</h2>
-                            <p>Op LevelX ben ik geintroduceerd aan programmeren. Hier ben ik ingeschreven geweest van
+                            <p>Op LevelX ben ik geintroduceerd aan programmeren met hun informatica richting. Hier ben
+                                ik ingeschreven geweest van
                                 2019-2021.
                                 Hier heb ik ook mijn diploma gehaald voor de middelbare school</p>
                         </div>
@@ -91,7 +92,7 @@
                             <p>Op het PXL heb ik eerst 2 jaar de bachelor toegepaste informatica gevolgd. Na mijn 2de
                                 jaar
                                 besloot
-                                ik echter de graduaats richting programmeren te gaan volgen. Hier ben ik sinds 2021
+                                ik echter de graduaat richting programmeren te gaan volgen. Hier ben ik sinds 2021
                                 ingeschreven.
                             </p>
                         </div>
