responsive + alles werkend
zie titel

--- a/engels/indexEn.html
+++ b/engels/indexEn.html
@@ -22,7 +22,7 @@
         <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
-                <a href="/nederlands/indexNl.html">Dutch</a>
+                <a href="/CV/nederlands/indexNl.html">Dutch</a>
                 <a href="indexEn.html" class="active">English</a>
             </div>
         </li>
