--- a/engels/werkervaringEN.html
+++ b/engels/werkervaringEN.html
@@ -22,7 +22,7 @@
         <li><a class="active" href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
-                <a href="/nederlands/werkervaringNL.html">Dutch</a>
+                <a href="/CV/nederlands/werkervaringNL.html">Dutch</a>
                 <a href="werkervaringEN.html" class="active">English</a>
             </div>
         </li>
@@ -63,7 +63,7 @@
             <td>March 2019 - April 2019</td>
         </tr>
         <tr>
-            <td>Handyman with Grandpa</td>
+            <td>Handyman with grandpa</td>
             <td>Handyman</td>
             <td>With my grandfather I went to do odd jobs/renovations at people's houses several times a year. Together
                 we did jobs that ranged from simply painting a wall to laying new walls, flooring, pipes & electricity
@@ -71,8 +71,38 @@
                 seems difficult and to do this without complaining.</td>
             <td>2013-2022</td>
         </tr>
-
     </table>
+
+    <ul class="vervanger">
+        <li>Activate
+            <ul>
+                <li>Salesman</li>
+                <li>I sold subscriptions door to door to support charities.</li>
+                <li>December 2022 - March 2023</li>
+            </ul>
+        </li>
+        <li>Servilux
+            <ul>
+                <li>Logistics assistant</li>
+                <li>I helped unpack deliveries, scan them into the system & put them away.</li>
+                <li>December 2021 - January 2022</li>
+            </ul>
+        </li>
+        <li>Brantano
+            <ul>
+                <li>Shop assistant</li>
+                <li>I helped in the store and in the stock area.</li>
+                <li>March 2019 - April 2019</li>
+            </ul>
+        </li>
+        <li>Handyman with grandpa
+            <ul>
+                <li>Handyman</li>
+                <li>I helped my grandpa with fixing up houses.</li>
+                <li>2013-2022</li>
+            </ul>
+        </li>
+    </ul>
 
     <footer>
         <p id="links">Remco Simenon 1PROE</p>
