--- a/nederlands/schoolcarriereNL.html
+++ b/nederlands/schoolcarriereNL.html
@@ -22,7 +22,7 @@
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="schoolcarriereNL.html" class="active">Nederlands</a>
-                <a href="/engels/schoolcariereEN.html">Engels</a>
+                <a href="/CV/engels/schoolcariereEN.html">Engels</a>
             </div>
         </li>
     </ul>
@@ -102,13 +102,11 @@
 
 
         </div>
-
-        <br>
-
-
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
         <footer>
             <p id="links">Remco Simenon 1PROE</p>
             <p id="midden">Opdracht Curriculum vitae</p>
