--- a/nederlands/werkervaringNL.html
+++ b/nederlands/werkervaringNL.html
@@ -23,7 +23,7 @@
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="werkervaringNL.html" class="active">Nederlands</a>
-                <a href="/engels/werkervaringEN.html">Engels</a>
+                <a href="/CV/engels/werkervaringEN.html">Engels</a>
             </div>
         </li>
     </ul>
