--- a/engels/overmijEN.html
+++ b/engels/overmijEN.html
@@ -19,7 +19,7 @@
         <li><a href="werkervaringEN.html">Work Experience</a></li>
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Language</a>
             <div class="dropdown-content">
-                <a href="/nederlands/overmijNl.html">Dutch</a>
+                <a href="/CV/nederlands/overmijNl.html">Dutch</a>
                 <a href="overmijEN.html" class="active">English</a>
             </div>
         </li>
