--- a/nederlands/overmijNl.html
+++ b/nederlands/overmijNl.html
@@ -19,7 +19,7 @@
         <li class="dropdown"> <a href="javascript:void(0)" class="dropbtn">Taal</a>
             <div class="dropdown-content">
                 <a href="overmijNl.html" class="active">Nederlands</a>
-                <a href="/engels/overmijEN.html">Engels</a>
+                <a href="/CV/engels/overmijEN.html">Engels</a>
             </div>
         </li>
     </ul>
